# donation-whistle

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.prod.yaml  docker-compose.yaml  donation-scraper.py  donation-whistle.db  donation-whistle.py  donation_whistle_alias_export_2023-11-01.json  donation_whistle_alias_export_2023-11-22.json  donation_whistle_alias_export_2023-12-18.json  main-boot.sh  pyproject.toml  test_donation-whistle.py
app/: __init__.py  donation_whistle_alias_export_2023-09-21.json  donation_whistle_alias_export_2023-11-07.json  donation_whistle_export_2023-11-03.csv  donation_whistle_export_2023-12-08.csv  forms.py  import.py  import_data.py  models.py  routes.py
app/alias/: __init__.py  forms.py  routes.py
app/api/: __init__.py  routes.py
app/db_import/: __init__.py  forms.py  routes.py  tasks.py
app/main/: forms.py  routes.py
app/templates/: alias_delete.html  alias_detail.html  alias_port.html  alias_remove.html  aliases.html  base.html  create_new_alias.html  db_import.html  donor.html  donors.html  index.html  login.html  new_alias_name.html  no_records.html  recipient.html  recipient_stats.html  recipients.html  register.html  user_delete.html  users.html
migrations/versions/: 349abbb65582_added_donor_alias_notes.py  37b3fc6f0261_added_tasks.py  48d3a9a40195_initialise_with_new_backpopulate_method.py  4bd4376a1cd4_added_user_table.py  5616a2c3bcae_initial.py  7aa0b3c182d3_initial_donation_data_structure.py  880020fceb2f_notifications.py  a240e294a405_initial.py  b06e21b87c7c_initial.py  d1e4cb018781_initial.py
static/: about.txt
tests/: bad_json.json  dummy_alias_export.json  raw_data_2023-01-01.csv  test_donation-whistle.py
