[tool.poetry]
name = "donation-whistle"
version = "0.1.0"
description = "A Python application to retrieve, clean and visualise data from the UK  Electoral Commission's register of donations to political parties"
license = "MIT"
authors = [
    "Will Thong <will@willthong.com>"
]
repository = "https://github.com/willthong/donation-whistle"

[tool.poetry.dependencies]
python = "^3.11"
email-validator = "^2.0.0"
flask = "^2.3"
flask-caching = "^2.0.2"
flask-login = "^0.6.2"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.5"
flask-wtf = "^1.1.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flask-shell-ipython = "0.5.1"
